[package]
name = "rust_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
flate2 = "1.0"
zstd = "0.11"
lz4 = "1.8"
zip = "0.6"





